pages/simulation/simulation.css
@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap);
::-webkit-scrollbar {
  display: none;
}

:root {
  --secondary-bg: radial-gradient(
    circle farthest-corner at -5.6% -6.8%,
    #0f375c 37.3%,
    #153249 73.5%
  );
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  font-family: "Roboto", sans-serif;
  /* overflow: hidden; */
}

html {
  background-color: black;
}

/** ############### **/
/** Button Classes  **/
/** ############### **/

.button {
  width: 100%;
  padding: 10px;
  margin: 5px 0;
  border-radius: 30px;
  border: none;
  color: #ebebeb;
  font-size: large;
}

.button:hover {
  background-color: #3c77a7;
  cursor: pointer;
}

.close-btn {
  border-radius: 10px;
  border: none;
  position: fixed;
  top: max(5rem, env(safe-area-inset-top));
  right: max(3rem, env(safe-area-inset-right));
  z-index: 5;
  display: none;
  opacity: 0;
  padding: 6px;
  background-color: #d6d6d6;
}

.close-btn:hover {
  cursor: pointer;
  background-color: #ffff;
}

.screen-btn {
  border-color: #1d598f;
  background-color: #1d598f;
  box-shadow: 0px 0px 10px black;
}

.begin-simulation-btn {
  font-family: "Roboto", sans-serif;
  width: auto;
  padding: 15px 30px;
  text-align: center;
  margin: auto;
  display: flex;
  background-color: rgba(0, 0, 0, 0);
  border: 2px white solid;
  text-shadow: 0 0 8px #fff, 0 0 2px #00c8ff00;
  animation: fade-in ease-in-out 3000ms forwards,
    breathing-btn ease-in-out 2250ms 250ms infinite;
  opacity: 0;
  transition: all 600ms;
  /* margin-top: 20vh; */
}

.begin-simulation-btn:hover {
  background-color: #0f375c81;
}

@keyframes breathing-btn {
  0%,
  100% {
    box-shadow: #53a2f5 0 0 15px 0.03px;
  }
  50% {
    box-shadow: #53a2f5 0 0 15px 3px;
  }
}

.card {
  padding: 10px;
}

/** ############### **/
/** Title Style  **/
/** ############### **/
.title {
  margin-top: 1vh;
  font-size: xxx-large;
  text-align: center;
  color: white;
  text-shadow: 0 0 5px #fff, 0 0 10px #53a2f5;
  z-index: 2;
  position: relative;
  margin-bottom: 0;
  text-transform: uppercase;
}

@keyframes title-glow {
  0%,
  100% {
    text-shadow: 0 0 8px #fff, 0 0 16px #53a2f5;
  }
  50% {
    text-shadow: 0 0 20px #fff, 0 0 40px #53a2f5;
  }
}

/** ################### **/
/** General Animations  **/
/** ################### **/
@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fridge-animation {
  0% {
    opacity: 0;
    transform: scale(0.3);
  }
  50% {
    opacity: 0.8;
    transform: scale(0.3);
  }
  100% {
    opacity: 1;
    scale: 2;
    transform: scale(0.7);
  }
}

/** ############### **/
/** Screen Classes  **/
/** ############### **/

.screen {
  display: none;
  opacity: 0;
  position: relative;
  color: #ebebeb;
  z-index: 2;
  border-radius: 30px;
  flex-direction: column;
  padding: 15px;
  /* box-shadow Source: https://getcssscan.com/css-box-shadow-examples */
  box-shadow: rgba(255, 255, 255, 0.2) 0px 0px 0px 1px inset,
    rgba(0, 0, 0, 0.9) 0px 0px 0px 1px;
  /* Radial gradiant created with https://cssgradient.io */
  background-image: radial-gradient(
    circle 382px at 50% 50.2%,
    #04192d 0.1%,
    #05131f 100.2%
  );
  top: 25%;
  left: 30%;
  z-index: 3;
  position: fixed;
  transform: none;
}

.top-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: #9c9c9c;
}

.top-bar h3 {
  margin: 0;
}

.screen hr {
  width: calc(100% + 30px);
  left: -15px;
  position: relative;
  height: 1px;
  border: 0;
  border-top: 2px solid #153249;
  padding: 0;
}

/** ########################## **/
/** Bottom Navigation Classes  **/
/** ########################## **/

.bottom-menu {
  display: flex;
  justify-content: space-around;
  padding: 10px;
  border-radius: 8px;
}

.menu-item {
  display: flex;
  flex: 1;
  flex-direction: column;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 15px;
  text-decoration: none;
  gap: 5px;
  margin: 0 1%;
  color: #9c9c9c;
}

.menu-item i {
  font-size: 35px;
}

.menu-item:hover {
  color: #a6c7f9;
}

.selected {
  color: #ebebeb;
}

/** ####################### **/
/** Screen Content Classes   **/
/** ####################### **/

.content {
  flex-grow: 1;
  padding: 3px 0px 3px 20px;
  border-radius: 8px;
  box-sizing: border-box;
  margin-bottom: 10px;
  overflow: scroll;
}

.content h3 {
  margin-bottom: 3px;
}

.card {
  border-color: #1d598f;
  background-color: #1d598f;
  box-shadow: 0px 0px 10px black;
  padding: 10px;
  margin: 5px 0;
  border-radius: 30px;
  border: none;
  color: #ebebeb;
  font-size: large;
  flex: 1;
}

.card h1 {
  margin: 0px;
  font-size: 150%;
}

/** ######################## **/
/** Space Background Classes **/
/** ######################## **/
#bgCanvas {
  overflow: hidden;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  display: block;
}

.dim-background {
  animation: dimdown 500ms forwards ease-in;
}

@keyframes dimdown {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0.1;
  }
}

/** ############### **/
/** Fridge Classes  **/
/** ############### **/

.frigo-container {
  text-align: center;
  display: none;
  position: relative;
  margin: 0 auto;
}

.frigo {
  width: 1%;
  opacity: 0;
}

.frigo-animation {
  animation: 900ms frigo-animation ease-in-out forwards;
}

@keyframes frigo-animation {
  0% {
    opacity: 0;
    width: 1%;
  }
  50% {
    opacity: 0.4;
  }
  100% {
    width: 40%;
    opacity: 1;
  }
}

/** ############### **/
/** Star Classes  **/
/** ############### **/
.star_logo {
  width: 20px;
  height: 20px;
  position: fixed;
  display: none;
  cursor: pointer;
  z-index: 2;
}

.interactable {
  position: fixed;
  cursor: pointer;
  display: none;
  align-content: center;
}

/** ############### **/
/** Recipes Classes **/
/** ############### **/
.scrollable {
  display: flex;
  gap: 16px;
  overflow-x: auto;
  scrollbar-width: none;
  padding: 10px 5px;
}

.scrollable::-webkit-scrollbar {
  display: none;
}

.recipe {
  position: relative;
  flex: 0 0 auto;
  width: 30vw;
  max-width: 200px;
  aspect-ratio: 9 / 16;
  border-radius: 15px;
  background: var(--secondary-bg);
  display: flex;
  justify-content: center;
  align-items: center;
  box-shadow: 0px 0px 10px black;
}

.recipe:hover {
  cursor: pointer;
}

.recipe video {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 15px;
}

.video-overlay {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 30%;
  background: linear-gradient(
    to top,
    rgba(0, 0, 0, 0.9) 40%,
    rgba(0, 0, 0, 0) 100%
  );
  display: flex;
  align-items: flex-end;
  border-radius: 0 0 15px 15px;
}

.video-text {
  padding: 15px;
}

.video-text h3 {
  margin: 0;
  font-size: 1.1rem;
}

.video-text p {
  margin: 5px 0 0;
  font-size: 0.9rem;
  opacity: 0.85;
}

/** ################ **/
/** Expiring Classes **/
/** ################ **/

.food-card {
  flex: 0 0 auto;
  width: 180px;
  background: var(--secondary-bg);
  border-radius: 16px;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
  overflow: hidden;
  box-shadow: 0px 0px 10px black;
}

.food-img {
  width: 100%;
  height: 120px;
  object-fit: contain;
}

.food-info {
  padding: 0 12px;
}
.food-name {
  font-size: 1rem;
  font-weight: 600;
  margin: 0;
}
.food-expire {
  font-size: 0.85rem;
  margin-top: 4px;
}

.view-more {
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

/** ################# **/
/** Nutrition Classes **/
/** ################# **/
.nutrition-card {
  background: var(--secondary-bg);
  border-radius: 15px;
  padding: 16px;
  display: flex;
  flex-direction: column;
  box-shadow: 0px 0px 10px black;
}

.nutrition-header h3 {
  margin: 0;
  font-size: 1.1rem;
  font-weight: 600;
}

.nutrition-subtitle {
  font-size: 0.85rem;
  color: #c3c3c3;
  margin-top: 4px;
  margin-bottom: 10px;
}

.nutrient-list {
  display: flex;
  flex-direction: column;
  gap: 6px;
}

.nutrient-item {
  display: flex;
  justify-content: space-between;
  font-size: 0.9rem;
  padding: 6px 10px;
  border-radius: 10px;
  background: #285376;
}

.nutrient-name {
  font-weight: 500;
  padding: 5px;
}

.nutrient-status {
  font-weight: 600;
  font-size: 0.85rem;
  padding: 5px;
  border-radius: 10px;
  color: #000000;
}

.nutrient-status.low {
  background-color: #dc2626;
}
.nutrient-status.medium {
  background-color: #ffcc00;
}
.nutrient-status.good {
  background-color: #339900;
}

.nutrition-footer {
  text-align: center;
  margin-top: 12px;
}

/** ################# **/
/** Star Logo Classes **/
/** ################# **/

#starContainer {
  position: fixed;
  top: 100px;
  left: 100px;
  width: 200px;
  height: 200px;
  align-items: center;
  display: none;
  z-index: 3;
  cursor: pointer;
  opacity: 0;
  transform: translate(0, 0);
}

#starCanvas {
  width: 100%;
  height: 100%;
  display: block;
  background: transparent;
  margin: auto;
}

#simulation-section {
  color: white;
  padding: 0 20%;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  height: 92vh;
  background: linear-gradient(
      to bottom,
      rgba(12, 36, 62, 0.3),
      rgba(8, 30, 50, 0.3)
    ),
    url("../../images/fridge-background.jpg") no-repeat fixed center/cover;
  overflow: hidden;
}

#simulation-section::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 50%;
  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, #000 100%);
  pointer-events: none;
}

#showcase-section {
  height: 100vh;
  padding: 20px;
}

